--- a/src/App.css
+++ b/src/App.css
@@ -239,55 +239,23 @@ p {
 
 .btne {
   position: relative;
-  padding-left: 10px;
+  display: flex;
+  justify-content: center;
   padding-bottom: 5px;
   padding-top: 5px;
-  font-size: 1.0rem;
-  color: whitesmoke;
+  margin-top: 5px;
+  font-size: 0.9rem;
+  color: black;
   transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
   cursor: pointer;
   user-select: none;
-}
-
-.btne:before, .btne:after {
-  content: '';
-  position: absolute;
-  transition: inherit;
-  z-index: -1;
+  background: #4a6e1f;
+  border-radius: 25px;
 }
 
 .btne:hover {
-  color: black;
-  transition-delay: .10s;
-}
+  font-size: 1.0rem;
 
-.btne:hover:before {
-  transition-delay: 1s;
-}
+  color: white;
 
-.btne:hover:after {
-  background: #4a6e1f;
-  transition-delay: .0s;
-}
-
-/* From Top */
-
-.from-top:before,
-.from-top:after {
-  left: 0;
-  height: 0;
-  width: 50%;
-}
-
-
-.from-top:after {
-  top: 0;
-  height: 0;
-  border-radius: 25px;
-
-}
-
-.from-top:hover:before,
-.from-top:hover:after {
-  height: 100%;
 }
